[tool.poetry]
name = "data-utils"
version = "0.1.0"
description = "A set of generic, useful data science and machine learning methods."
authors = ["AndreCNF <andrecnf@gmail.com>"]
homepage = "https://github.com/andrecnf/data_utils"
repository = "https://github.com/andrecnf/data_utils"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.2"
pandas = "^0.25.1"
dask = "^2.5"
distributed = "^2.5"
pdoc3 = "^0.7.2"
comet-ml = "^2.0"
comet_ml = "^2.0"
everett = "^1.0"
tqdm = "^4.38"
fsspec = "^0.6.0"
sklearn = "^0.0.0"
sphinx = "^2.2"
portray = "^1.3"
modin = "^0.7.0"
ray = "0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4"

[tool.portray]
output_dir = "docs"
modules = "data_utils"

[tool.portray.mkdocs.theme]
name = "material"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
