[tool.poetry]
name = "data-utils"
version = "0.1.0"
description = "A set of generic, useful data science and machine learning methods."
authors = ["AndreCNF <andrecnf@gmail.com>"]
homepage = "https://github.com/andrecnf/data_utils"
repository = "https://github.com/andrecnf/data_utils"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "^1.3"
pandas = "1.0.3"
dask = "^2.5"
distributed = "^2.5"
pdoc3 = "^0.9.1"
comet-ml = "^3.1.2"
everett = "^1.0.2"
tqdm = "^4.43.0"
fsspec = "^0.6.0"
sklearn = "^0.0.0"
sphinx = "^2.2"
portray = "^1.3"
pillow = "^8.2.0"
dash = "^1.14.0"
plotly = "^4.9.0"
comet_ml = "^3.1.12"
modin = "^0.7.3"
dash_bootstrap_components = "^0.10.2"
dash_table = "^4.8.1"
colorlover = "^0.3.0"
configobj = "^5.0.6"
ipykernel = "^5.3.4"
ipywidgets = "^7.5.1"
pyarrow = "0.16.0"
pixiedust = "^1.1.18"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4"

[tool.portray]
output_dir = "docs"
modules = "data_utils"

[tool.portray.mkdocs.theme]
name = "material"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
